ajout de signature Specimen